# basicrl

./: .envrc  .envrc.bak  .gitignore  DUNGEON_GENERATOR_ANALYSIS.md  README.md  code_basicrl.txt  color_map.txt  color_test.py  console.txt  environment.yml  game_rng.py  generated_dungeon.arrow  main.py  main.py.bak  main2.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_log.txt  scripting_engine.py  settlement_map.py  simulation_output.txt  test.txt  to implement.txt
.github/: copilot-instructions.md
AI/: ARCHITECTURE.md  WORKLIST.md  v9.py
Dungeon/: run_log.txt  shaper.py
auto/: README.md  main.py  simulation.py
config/: config.yaml  entities.yaml  items.yaml  keybindings.toml  sounds.yaml
docs/: contributing.md  modding.md  rendering.md  sound_system.md
engine/: action_handler.py  console.py.bak  main_loop.py  main_loop.py.bak  render_base_layers.py  render_entities.py  render_lighting.py  renderer.py  rendering.py.bak  tileset_loader.py  window_manager.py  window_manager.py.bak
game/: game_state.py
lights_dev/: constants.py  main_game.py
magic/: __init__.py  executor.py  library.py  models.py  work_parser.py
pathfinding/: README.md  perception_systems.py  test.py
prototypes/: demo_sound_system.py  roaming_entity_demo.py
simulation/: zone_manager.py
tests/: test_action_handler_failures.py  test_action_resolver.py  test_ai_concurrency.py  test_ai_dispatch_fallbacks.py  test_ai_habit.py  test_ai_pathfinding.py  test_combat_system.py  test_effect_handlers.py  test_fov_visibility.py  test_goap_levels.py  test_helpers.py  (+19 more)
(+192 files in other folders)
