[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basicrl"
version = "0.1.1"
description = "BasicRL project"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*", "prototypes*", "scripts*"]
